BanItem filters out FakePlayers.